# Time-inverted_Kuramoto

./: README.md  fun.m  main.m
Kuramoto_matlab/: DeepPink.m  DodgerBlue.m  fun.m  kuramoto.m  main.m
Kuramoto_python/: KuramotoModel.cpp  Lloydalgorithm.cpp  akura  kuramoto.cpp  kuramoto1.cpp  kuramoto_simulation  kuramoto_simulation1  ll  ll1  main (copy).py  main.py  output.csv  plotting.py
rbl_controller/: README.md
rbl_controller/ros_packages/rbl_controller/: CMakeLists.txt  nodelet_plugins.xml  package.xml
rbl_controller/ros_packages/rbl_controller/config/: default.yaml
rbl_controller/ros_packages/rbl_controller/launch/: controller.launch
rbl_controller/ros_packages/rbl_controller/src/: rbl_controller.cpp
rbl_controller/scripts/: set_workspace.sh
rbl_controller/tmux/exp_six_drones/: tmux.sh
rbl_controller/tmux/exp_six_drones/config/: area_monitoring.yaml  network_config.yaml  tf_connector.yaml
rbl_controller/tmux/mrs_3_drones/: session.yml
rbl_controller/tmux/mrs_3_drones/config/: network_config.yaml  rbl_controller.yaml  simulator.yaml  tf_connector.yaml
rbl_controller/tmux/mrs_7_drones/: rviz.rviz  session.yml
rbl_controller/tmux/mrs_7_drones/config/: custom_config.yaml  network_config.yaml  rbl_controller.yaml  simulator.yaml  tf_connector.yaml
